<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">人脸健康</string>
    <string name="menu_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="button1">登录</string>
    <string name="button2">注册</string>
    <string name="title_activity_facedetect">Facedetect</string>
    <string name="title_activity_pic_src">PicSrc</string>
    <string name="dig_title">图片来源</string>

    <drawable name="dig_clolor">#000099</drawable>

    <string name="local">相册</string>
    <string name="camera">拍照</string>
    <string name="username">用户名</string>
    <string name="female">女           </string>
    <string name="gender">性别</string>
    <string name="age">年龄</string>
    <string name="others">其它</string>
    <string name="male">男</string>
    <string name="code">密码</string>
    <string name="check">开始</string>
    <string name="backout">退出登陆</string>
    <string name="title_activity_signin">Signin</string>
    <string name="pleaseinputname">请输入用户名！</string>
    <string name="pleaseinputcode">请输入密码！</string>
    <string name="title_activity_indexshow">Indexshow</string>
    <string name="title_activity_inedxshow">Inedxshow</string>
    <string name="history_index">历史记录</string>
    <string name="resultshow">历史记录</string>

</resources>